<resources>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="login_btn">Log In</string>
    <string name="login_register">Don\'t have an account? Sign up!</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_facebook">Sign In with Facebook</string>
    <string name="auth_name_hint">Name</string>
    <string name="auth_password_repeat_hint">Repeat password</string>
    <string name="register_btn">Sign up</string>
    <string name="auth_loading">Loading…</string>
    <string name="register_login">Already have an account? Log in!</string>
    <string name="login_facebook_loading">Signing in…</string>
    <string name="patrol">Patrol</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="contacts_title">New message</string>
    <string name="contacts">Contacts</string>
    <string name="group_title">New group</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="drawer_not_assigned">Not assigned</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_alert_title">Alert other guards</string>
    <string name="main_alert_desc">I need backup!</string>
    <string name="main_messages_title">%1$d new message(s)!</string>
    <string name="contacts_group_new">New group</string>
    <string name="main_location">Location</string>
    <string name="about_title">About Stigg Security</string>
    <string name="about_desc">Stigg Security Inc. provides advanced solutions for all your security needs.\n\nOur priority is protecting our clients and their money, as we ensure that every detail is completed to its optimal potential, limiting your exposure to internal and external theft.\n\nSecurity and reliable service are more important than ever.</string>
    <string name="action_swap_wearable">Change a watch</string>
    <string name="watch_hint">Guard\'s name…</string>
    <string name="action_change_account">Change an account</string>
</resources>
