<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        tools:context=".auth.LoginActivity"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="36dp"
            android:contentDescription="@null"
            android:src="@drawable/logo"
            android:tint="@android:color/white" />

        <EditText
            android:id="@+id/register_name_edit_txt"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/register_name"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/register_name"
            android:hint="@string/auth_name_hint"
            android:inputType="textPersonName"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_email_edit_txt"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/auth_email"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/auth_email"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_password_edit_txt"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/auth_password"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/auth_password"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_password_repeat_edit_txt"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/auth_password_repeat"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/auth_password_repeat"
            android:hint="@string/auth_password_repeat_hint"
            android:inputType="textPassword"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

        <Button
            fontPath="fonts/Roboto-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/register_btn"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:theme="@style/Button" />

        <Button
            style="?buttonBarButtonStyle"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:onClick="onLoginButtonClicked"
            android:paddingRight="16dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:text="@string/register_login"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>